package gamesource.util;

public interface Money {
    int money = 0;
    public void setMoney(int money);
    public int getMoney();
}